--- a/css/styles.css
+++ b/css/styles.css
@@ -10673,7 +10673,7 @@ header.masthead {
   padding-top: calc(8rem + 57px);
   padding-bottom: 8rem;
   background: no-repeat center center;
-  background-color: #282828;
+  background-color: #00FFFFFF;
   background-size: contain;
   background-attachment: scroll;
 }
