--- a/css/styles.css
+++ b/css/styles.css
@@ -10690,7 +10690,7 @@ header.masthead:before {
 header.masthead .page-heading,
 header.masthead .post-heading,
 header.masthead .site-heading {
-  color: #fff;
+  color: #b8bb26;
 }
 header.masthead .page-heading,
 header.masthead .site-heading {
