--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,8 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+ZSH_THEME="robbyrussell"
+  --bs-body-bg: #282828;
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #dee2e6;
