--- a/css/styles.css
+++ b/css/styles.css
@@ -10767,11 +10767,11 @@ header.masthead .post-heading .meta a {
 }
 
 .post-preview > a {
-  color: #212529;
+  color: #ebdbb2;
 }
 .post-preview > a:focus, .post-preview > a:hover {
   text-decoration: none;
-  color: #0085A1;
+  color: #fbf1b7;
 }
 .post-preview > a > .post-title {
   font-size: 1.875rem;
