--- a/css/styles.css
+++ b/css/styles.css
@@ -1996,8 +1996,8 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
+  color: #ebdbb2;
+  background-color: #282828;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   -webkit-appearance: none;
